added worktime. not configurable yet

--- a/appinfo.json
+++ b/appinfo.json
@@ -5,6 +5,7 @@
   "companyName": "MakeAwesomeHappen",
   "versionCode": 1,
   "versionLabel": "1.0.0",
+  "capabilities": [ "configurable" ],
   "watchapp": {
     "watchface": false
   },
